--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -62,7 +64,24 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
+    // navigation
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha06"
     implementation "androidx.activity:activity-compose:1.3.1"
+
+    // Room components
+    implementation "androidx.room:room-runtime:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle : lifecycle-extensions : 2.2.0"
+    implementation "androidx.lifecycle : lifecycle-common-java8 : 2.2.0"
+    implementation "androidx.lifecycle : lifecycle-viewmodel-ktx : 2.2.0"
+
+    // Kotlin components
+    implementation "org.jetbrains.kotlin : kotlin-stdlib-jdk7 : 1.3.72"
+    api "org.jetbrains.kotlinx : kotlinx-coroutines-core : 1.3.5"
+    api "org.jetbrains.kotlinx :kotlinx-coroutines-android : 1.3.5"
 }
